--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -9,4 +9,5 @@
     <color name="colorPositive">#7CB342</color>
 
     <color name="white">#fff</color>
+    <color name="damp">#977F6D</color>
 </resources>
